# InfernoBlockchain

./: .env  .envrc  .python-version  Cargo.toml  build.rs
benchmarks/: consensus_bench.rs
src/: lib.rs  main.rs
src/core/: error.rs  mod.rs  testutils.rs
src/core/infernal_config/: infernal_config_chain.rs  infernal_config_embers.rs  mod.rs
src/core/infernal_corevault/: infernal_corevault_ashpool.rs  infernal_corevault_emberchain.rs  mod.rs
src/core/infernal_mev_flames/: infernal_mev_flames_api.rs  infernal_mev_flames_ashtide.rs  infernal_mev_flames_blazecircuit.rs  infernal_mev_flames_emberflow.rs  infernal_mev_flames_emberstore.rs  infernal_mev_flames_flamehooks.rs  infernal_mev_flames_infernalwatchdogs.rs  infernal_mev_flames_logic.rs  infernal_mev_flames_nexus.rs  infernal_mev_flames_nexus_basic.rs  infernal_mev_flames_nexus_embermetrics.rs  infernal_mev_flames_nexus_living.rs  infernal_mev_flames_nexus_scale.rs  infernal_mev_flames_nexus_surge.rs  infernal_mev_flames_pulse.rs  infernal_mev_flames_pyreshard.rs  infernal_mev_flames_types.rs  mod.rs
src/core/infernal_neuroswarm_consensus/: infernal_neuroswarm_consensus_adc.rs  infernal_neuroswarm_consensus_bloom.rs  infernal_neuroswarm_consensus_chaos.rs  infernal_neuroswarm_consensus_finalflame.rs  infernal_neuroswarm_consensus_flamehash.rs  infernal_neuroswarm_consensus_geofire.rs  infernal_neuroswarm_consensus_lilith.rs  infernal_neuroswarm_consensus_logic.rs  infernal_neuroswarm_consensus_microflame.rs  infernal_neuroswarm_consensus_shardforge.rs  infernal_neuroswarm_consensus_storage.rs  infernal_neuroswarm_consensus_swarmforge.rs  infernal_neuroswarm_consensus_types.rs  mod.rs  (+1 more)
tests/: core_tests.rs  full_consensus_real.rs
(+12 files in other folders)
